// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderLinks gutterSize l is rendered 1`] = `
<nav
  aria-label="App menu"
  class="euiHeaderLinks"
>
  <div
    class="euiHeaderLinks__list euiHeaderLinks__list--gutterL"
  />
</nav>
`;

exports[`EuiHeaderLinks gutterSize m is rendered 1`] = `
<nav
  aria-label="App menu"
  class="euiHeaderLinks"
>
  <div
    class="euiHeaderLinks__list euiHeaderLinks__list--gutterM"
  />
</nav>
`;

exports[`EuiHeaderLinks gutterSize s is rendered 1`] = `
<nav
  aria-label="App menu"
  class="euiHeaderLinks"
>
  <div
    class="euiHeaderLinks__list euiHeaderLinks__list--gutterS"
  />
</nav>
`;

exports[`EuiHeaderLinks gutterSize xs is rendered 1`] = `
<nav
  aria-label="App menu"
  class="euiHeaderLinks"
>
  <div
    class="euiHeaderLinks__list euiHeaderLinks__list--gutterXS"
  />
</nav>
`;

exports[`EuiHeaderLinks is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiHeaderLinks testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiHeaderLinks__list euiHeaderLinks__list--gutterS"
  />
</nav>
`;

exports[`EuiHeaderLinks popover props is never rendered with "none" 1`] = `
<nav
  aria-label="App menu"
  class="euiHeaderLinks"
>
  <div
    class="euiHeaderLinks__list euiHeaderLinks__list--gutterS"
  />
</nav>
`;

exports[`EuiHeaderLinks popover props is rendered 1`] = `
<nav
  aria-label="App menu"
  class="euiHeaderLinks"
>
  <div
    class="euiPopover emotion-euiPopover"
  >
    <div
      class="euiPopover__anchor customAnchorClass css-16vtueo-render"
    >
      <button
        aria-label="Open menu"
        class="euiButtonEmpty euiHeaderSectionItemButton customButtonClass css-wvaqcf-empty-text"
        type="button"
      >
        <span
          class="euiButtonContent euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            <span
              class="euiHeaderSectionItemButton__content"
            >
              <span
                data-euiicon-type="bolt"
              />
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</nav>
`;
